fix: icons position on mobile

--- a/editor-components/slider/slider1/slider1.module.scss
+++ b/editor-components/slider/slider1/slider1.module.scss
@@ -304,7 +304,7 @@
                                 column-gap: var(--composer-gap-md);
                                 row-gap: var(--composer-gap-sm);
                                 position: absolute;
-                                bottom: 60px;
+                                bottom: 50px;
                                 left: 50%;
                                 transform: translateX(-50%);
                                 width: 100%;
